feat: work on Java 8+